tooling/nargo_cli/tests/snapshots/compile_failure/primary_attribute_struct/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: struct `SomeStruct` is never constructed
  ┌─ src/main.nr:3:8
  │
3 │ struct SomeStruct{
  │        ---------- struct is never constructed
  │

error: A function attribute cannot be placed on a struct or enum
  ┌─ src/main.nr:2:1
  │
2 │ #[oracle(some_oracle)]
  │ ----------------------
  │

Aborting due to 1 previous error
